%%{init: {'theme':'base', 'themeVariables': { 'primaryColor':'#F3ECDD','primaryBorderColor':'#3B210F','primaryTextColor':'#2B2B2B','lineColor':'#3B210F','tertiaryColor':'#F3ECDD','fontFamily':'Arial, sans-serif','fontSize':'13px'}}}%%
erDiagram
    TIPO_HABITACION ||--o{ HABITACION : clasifica
    HABITACION ||--o{ RESERVA : aloja
    HUESPED ||--o{ RESERVA : realiza
    USUARIO ||--o{ RESERVA : registra
    EMPRESA |o--o{ RESERVA : factura_a
    RESERVA ||--o{ PAGO : recibe
    USUARIO ||--o{ PAGO : cobra
    USUARIO ||--o{ VENTA_TIENDA : vende
    USUARIO ||--o{ COMPROBANTE : emite
    HUESPED |o--o{ VENTA_TIENDA : compra
    HABITACION |o--o{ VENTA_TIENDA : "carga_a_cuenta"
    VENTA_TIENDA ||--o{ DETALLE_VENTA : contiene
    PRODUCTO ||--o{ DETALLE_VENTA : aparece_en
    CATEGORIA ||--o{ PRODUCTO : clasifica
    RESERVA |o--o| COMPROBANTE : genera
    COMPROBANTE |o--o{ VENTA_TIENDA : consolida

    TIPO_HABITACION {
        int id_tipo PK
        string nombre UK
        int capacidad
        decimal precio_base
    }
    HABITACION {
        int id_habitacion PK
        string numero UK
        int id_tipo FK
        int piso
        string estado
    }
    HUESPED {
        int id_huesped PK
        string tipo_documento
        string num_documento
        string nombres
        string apellidos
        string pais_procedencia
        string telefono
        string email
        datetime fecha_registro
    }
    USUARIO {
        int id_usuario PK
        string nombre
        string apellido
        string usuario UK
        string contrasena_hash
        string rol
        boolean activo
        datetime fecha_creacion
    }
    RESERVA {
        int id_reserva PK
        int id_huesped FK
        int id_habitacion FK
        int id_usuario FK
        datetime fecha_reserva
        date fecha_checkin
        date fecha_checkout
        decimal adelanto
        decimal monto_total
        string estado
        string canal
        int id_empresa FK
    }
    EMPRESA {
        int id_empresa PK
        string ruc UK
        string razon_social
        string direccion_fiscal
    }
    PAGO {
        int id_pago PK
        int id_reserva FK
        int id_usuario FK
        decimal monto
        string metodo_pago
        string tipo_pago
        datetime fecha_pago
    }
    CATEGORIA {
        int id_categoria PK
        string nombre UK
    }
    PRODUCTO {
        int id_producto PK
        string codigo_barra UK
        string nombre
        string marca
        int id_categoria FK
        decimal precio
        int stock
        boolean activo
    }
    COMPROBANTE {
        int id_comprobante PK
        int id_reserva FK
        int id_usuario FK
        string tipo
        string numero UK
        datetime fecha_emision
        decimal monto_total
    }
    VENTA_TIENDA {
        int id_venta PK
        int id_huesped FK
        int id_habitacion FK
        int id_usuario FK
        int id_comprobante FK
        string cliente_externo
        datetime fecha_venta
        decimal total
    }
    DETALLE_VENTA {
        int id_detalle PK
        int id_venta FK
        int id_producto FK
        int cantidad
        decimal precio_unitario
        decimal subtotal
    }
